[fix] fix line width on tablet and mobile versions, fix mobile menu behavior

--- a/app/assets/stylesheets/base/_base.sass
+++ b/app/assets/stylesheets/base/_base.sass
@@ -13,7 +13,7 @@ body
   overflow-y: scroll
 
   +media-only(tablet)
-    padding: 0 5%
+    padding: 0 5vw
 
   +media-only(mobile)
     padding: 0 1em $header-height
@@ -21,6 +21,7 @@ body
 main
   position: relative
   padding-bottom: 4.375em
+  overflow-x: hidden
 
   +media-only(mobile)
     padding-bottom: 3.375em
