--- a/app/assets/stylesheets/components/_line.sass
+++ b/app/assets/stylesheets/components/_line.sass
@@ -4,6 +4,6 @@
   background-color: $color--brand
   margin: 4.375em -4.375em
 
-  +media-only(mobile)
-    width: calc(100% + 10%)
-    margin: 3.375em -5%
+  +media-down(tablet)
+    width: calc(100% + 10vw)
+    margin: 3.375em -5vw
